--- a/m2/s3/progetto/index.html
+++ b/m2/s3/progetto/index.html
@@ -26,7 +26,10 @@
   <main>
     <div class="container px-sm-0">
       <div class="title d-flex justify-content-between align-items-center py-2 mb-3">
-        <h1 class="m-0">Prodotti</h1>
+        <div class="d-flex align-items-center">
+          <h1 class="m-0">Prodotti</h1>
+          <div class="spinner-border ms-3 d-none" role="status" id="loader"></div>
+        </div>
 
         <a href="crea-prodotto.html" class="edit d-block">
           <div class="d-flex justify-content-center align-items-center">
@@ -47,8 +50,8 @@
         <div class="card-body">
           <h5 class="card-title product-title"></h5>
           <p class="card-text product-price"></p>
-          <a href="dettagli.html" class="btn btn-primary details-btn">DETTAGLI</a>
-          <a href="modifica-prodotto.html" class="btn btn-info text-white edit-btn">MODIFICA</a>
+          <a href="#" class="btn btn-primary details-btn">DETTAGLI</a>
+          <a href="#" class="btn btn-info text-white edit-btn">MODIFICA</a>
           <button class="btn btn-orange text-white mt-2 add-to-cart-btn">AGGIUNGI AL CARRELLO</button>
         </div>
       </div>
