--- a/m2/s3/progetto/crea-prodotto.html
+++ b/m2/s3/progetto/crea-prodotto.html
@@ -79,6 +79,7 @@
     </div>
 
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/funzioni.js"></script>
     <script src="assets/js/crea-prodotto.js"></script>
 </body>
 
