--- a/m2/s3/progetto/modifica-prodotto.html
+++ b/m2/s3/progetto/modifica-prodotto.html
@@ -96,6 +96,7 @@
     </div>
 
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/funzioni.js"></script>
     <script src="assets/js/modifica-prodotto.js"></script>
 </body>
 
