--- a/m2/s3/progetto/index.html
+++ b/m2/s3/progetto/index.html
@@ -50,7 +50,7 @@
         <div class="card-body">
           <h5 class="card-title product-title"></h5>
           <p class="card-text product-price"></p>
-          <a href="#" class="btn btn-primary details-btn">DETTAGLI</a>
+          <a href="#" class="btn btn-primary details-btn">SCOPRI DI PI&Ugrave;</a>
           <a href="#" class="btn btn-info text-white edit-btn">MODIFICA</a>
           <button class="btn btn-orange text-white mt-2 add-to-cart-btn">AGGIUNGI AL CARRELLO</button>
         </div>
@@ -58,6 +58,7 @@
     </div>
   </template>
 
+  <script src="assets/js/funzioni.js"></script>
   <script src="assets/js/script.js"></script>
 </body>
 
