manca da sistemare la modifica dei prodotti

--- a/m2/s3/progetto/crea-prodotto.html
+++ b/m2/s3/progetto/crea-prodotto.html
@@ -59,7 +59,7 @@
     </main>
 
     <!-- Messages -->
-    <div class="alert alert-success position-fixed mb-0 text-white d-none my-alert" role="alert"></div>
+    <div class="alert position-fixed mb-0 text-white d-none my-alert" role="alert"></div>
 
     <!-- Modal -->
     <div class="modal fade" id="reset-modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
