--- a/m2/s3/progetto/modifica-prodotto.html
+++ b/m2/s3/progetto/modifica-prodotto.html
@@ -62,6 +62,9 @@
         </div>
     </main>
 
+    <!-- Messages -->
+    <div class="alert alert-success position-fixed mb-0 text-white d-none my-alert" role="alert"></div>
+
     <!-- Modals -->
     <div class="modal fade" id="delete-modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
         <div class="modal-dialog">
