--- a/m2/s3/progetto/index.html
+++ b/m2/s3/progetto/index.html
@@ -43,6 +43,9 @@
     </div>
   </main>
 
+  <!-- Messages -->
+  <div class="alert alert-success position-fixed mb-0 text-white d-none my-alert" role="alert"></div>
+
   <template id="product-template">
     <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center mb-2">
       <div class="card" style="width: 18rem;">
