compito finito (mancano ultime cose => script.js)

--- a/m2/s3/progetto/dettagli.html
+++ b/m2/s3/progetto/dettagli.html
@@ -49,6 +49,9 @@
         </div>
     </main>
 
+    <!-- Messages -->
+    <div class="alert alert-success position-fixed mb-0 text-white d-none my-alert" role="alert"></div>
+
     <script src="assets/js/funzioni.js"></script>
     <script src="assets/js/dettagli.js"></script>
 </body>
