--- a/m2/s3/progetto/crea-prodotto.html
+++ b/m2/s3/progetto/crea-prodotto.html
@@ -6,11 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop online | Crea prodotto</title>
 
-    <!-- FONTAWESOME -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
     <!-- CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.min.css">
@@ -32,20 +27,20 @@
 
             <form>
                 <p class="mt-2 mb-1">Nome</p>
-                <input type="text" placeholder="Inserisci il nome del prodotto" id="name-input">
+                <input type="text" placeholder="Inserisci il nome del prodotto*" id="name-input">
 
                 <p class="mt-2 mb-1">Brand</p>
-                <input type="text" placeholder="Inserisci il brand del prodotto" id="brand-input">
+                <input type="text" placeholder="Inserisci il brand del prodotto*" id="brand-input">
 
                 <p class="mt-2 mb-1">Prezzo (€)</p>
-                <input type="number" id="price-input">
+                <input type="number" id="price-input" placeholder="Inserisci il prezzo del prodotto*">
 
                 <p class="mt-2 mb-1">URL immagine</p>
-                <input type="text" placeholder="Inserisci l'immagine del prodotto" id="image-url-input">
+                <input type="text" placeholder="Inserisci l'immagine del prodotto*" id="image-url-input">
 
                 <p class="mt-2 mb-1">Descrizione prodotto</p>
                 <textarea name="textarea" id="description-input" rows="5"
-                    placeholder="Inserisci la descrizione del prodotto"></textarea>
+                    placeholder="Inserisci la descrizione del prodotto*"></textarea>
 
                 <div id="buttons-div" class="d-md-flex justify-content-md-end mt-md-2">
                     <div class="d-flex order-md-2 my-2 my-md-0">
