--- a/m2/s3/progetto/modifica-prodotto.html
+++ b/m2/s3/progetto/modifica-prodotto.html
@@ -34,20 +34,20 @@
 
             <form>
                 <p class="mt-2 mb-1">Nome</p>
-                <input type="text" placeholder="Inserisci il nome del prodotto" id="name-input">
+                <input type="text" placeholder="Inserisci il nome del prodotto*" id="name-input">
 
                 <p class="mt-2 mb-1">Brand</p>
-                <input type="text" placeholder="Inserisci il brand del prodotto" id="brand-input">
+                <input type="text" placeholder="Inserisci il brand del prodotto*" id="brand-input">
 
                 <p class="mt-2 mb-1">Prezzo (€)</p>
-                <input type="number" id="price-input">
+                <input type="number" id="price-input" placeholder="Inserisci il prezzo del prodotto*">
 
                 <p class="mt-2 mb-1">URL immagine</p>
-                <input type="text" placeholder="Inserisci l'immagine del prodotto" id="image-url-input">
+                <input type="text" placeholder="Inserisci l'immagine del prodotto*" id="image-url-input">
 
                 <p class="mt-2 mb-1">Descrizione prodotto</p>
                 <textarea name="textarea" id="description-input" rows="5"
-                    placeholder="Inserisci la descrizione del prodotto"></textarea>
+                    placeholder="Inserisci la descrizione del prodotto*"></textarea>
 
                 <div id="buttons-div" class="d-md-flex justify-content-md-between mt-md-2">
                     <div class="d-flex order-md-2 my-2 my-md-0">
