--- a/m2/s3/progetto/dettagli.html
+++ b/m2/s3/progetto/dettagli.html
@@ -6,11 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop online | Dettagli</title>
 
-    <!-- FONTAWESOME -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
     <!-- CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.min.css">
@@ -38,11 +33,12 @@
                 </div>
 
                 <div class="col-12 col-md-6 mt-2" id="product-info">
-                    <h2 class="mb-2" id="title"></h2>
-                    <h3 class="mb-2" id="brand"></h3>
-                    <p class="mb-2" id="description"></p>
-                    <h3 class="mb-2" id="price"></h3>
-                    <input type="number" placeholder="Quantità" class="mb-2 d-block">
+                    <h2 class="mb-2 h3" id="title"></h2>
+                    <h3 class="mb-4 h5" id="brand"></h3>
+                    <p class="mb-1 h3">Descrizione prodotto:</p>
+                    <p id="description"></p>
+                    <h3 class="mb-3 h3" id="price"></h3>
+                    <input type="number" placeholder="Quantità" class="mb-3 d-block">
                     <button class="btn btn-primary">AGGIUNGI AL CARRELLO</button>
                 </div>
             </section>
