--- a/m2/s3/progetto/dettagli.html
+++ b/m2/s3/progetto/dettagli.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop online | Dettagli</title>
 
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Orbitron&display=swap" rel="stylesheet">
+
     <!-- CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.min.css">
@@ -13,8 +18,12 @@
 
 <body>
     <header>
-        <div class="container-fluid py-2">
-            <img src="assets/images/logo.png">
+        <div class="container-fluid py-2 d-flex justify-content-between align-items-center">
+            <div class="d-inline-block text-center">
+                <p id="iannuzzo" class="text-white mb-0 h5">IANNUZZO</p>
+                <p id="auto" class="text-white mb-0 h6">AUTO</p>
+            </div>
+            <a href="#" class="text-white" id="back-office-link">BACK OFFICE</a>
         </div>
     </header>
 
@@ -32,14 +41,17 @@
                     <img src="" alt="foto prodotto" class="img-fluid rounded-2" id="img">
                 </div>
 
-                <div class="col-12 col-md-6 mt-2" id="product-info">
-                    <h2 class="mb-2 h3" id="title"></h2>
-                    <h3 class="mb-4 h5" id="brand"></h3>
-                    <p class="mb-1 h3">Descrizione prodotto:</p>
-                    <p id="description"></p>
-                    <h3 class="mb-3 h3" id="price"></h3>
+                <div class="col-12 col-md-6 mt-2 pb-5" id="product-info">
+                    <h2>Modello:</h2>
+                    <h5 class="mb-2 pb-3 h5 text-secondary section" id="title"></h5>
+                    <h2>Marca:</h2>
+                    <h5 class="pb-3 text-secondary h5 section" id="brand"></h5>
+                    <h2>Descrizione auto:</h2>
+                    <h5 id="description" class="pb-3 text-secondary h5 section"></h5>
+                    <h2>Prezzo:</h2>
+                    <h5 class="mb-2 text-secondary" id="price"></h5>
                     <input type="number" placeholder="Quantità" class="mb-3 d-block">
-                    <button class="btn btn-primary">AGGIUNGI AL CARRELLO</button>
+                    <button class="btn btn-primary">ACQUISTA AUTO</button>
                 </div>
             </section>
         </div>
