--- a/m2/s3/progetto/modifica-prodotto.html
+++ b/m2/s3/progetto/modifica-prodotto.html
@@ -11,6 +11,11 @@
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Orbitron&display=swap" rel="stylesheet">
+
     <!-- CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.min.css">
@@ -18,15 +23,19 @@
 
 <body>
     <header>
-        <div class="container-fluid py-2">
-            <img src="assets/images/logo.png">
+        <div class="container-fluid py-2 d-flex justify-content-between align-items-center">
+            <div class="d-inline-block text-center">
+                <p id="iannuzzo" class="text-white mb-0 h5">IANNUZZO</p>
+                <p id="auto" class="text-white mb-0 h6">AUTO</p>
+            </div>
+            <a href="#" class="text-white" id="back-office-link">BACK OFFICE</a>
         </div>
     </header>
 
     <main id="crea-prodotto-main">
         <div class="container pb-5">
             <div class="title py-2 d-flex align-items-center">
-                <h1>Modifica prodotto</h1>
+                <h1></h1>
                 <div class="spinner-border ms-3" role="status" id="loader">
                     <span class="sr-only">Loading...</span>
                 </div>
