--- a/m2/s3/progetto/index.html
+++ b/m2/s3/progetto/index.html
@@ -6,11 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shop online</title>
 
-  <!-- FONTAWESOME -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,23 +23,17 @@
         <p id="iannuzzo" class="text-white mb-0 h5">IANNUZZO</p>
         <p id="auto" class="text-white mb-0 h6">AUTO</p>
       </div>
-      <a href="#" class="text-white" id="back-office-link">BACK OFFICE</a>
+      <a href="back-office.html" class="text-white" id="back-office-link">BACK OFFICE</a>
     </div>
   </header>
 
   <main>
     <div class="container px-sm-0">
-      <div class="title d-flex justify-content-between align-items-center py-2 mb-3">
+      <div class="title py-2 mb-3">
         <div class="d-flex align-items-center">
           <h1 class="m-0">Le nostre auto</h1>
           <div class="spinner-border ms-3 d-none" role="status" id="loader"></div>
         </div>
-
-        <a href="crea-prodotto.html" class="edit d-block">
-          <div class="d-flex justify-content-center align-items-center">
-            <i class="fas fa-plus"></i>
-          </div>
-        </a>
       </div>
 
       <div class="row g-0" id="row">
