--- a/m2/s3/progetto/back-office.html
+++ b/m2/s3/progetto/back-office.html
@@ -47,10 +47,11 @@
             </div>
 
             <div id="back-office-div" class="pb-3 mb-3">
-                <div class="product row first py-2 px-2 g-0 align-items-center car">
-                    <p class="col-4 col-md-2 mb-0 product-name">MODELLO</p>
-                    <p class="col-4 col-md-2 mb-0 product-brand">MARCA</p>
-                    <p class="col-4 col-md-6 mb-0 hide product-description">DESCRIZIONE</p>
+                <div class="product row first py-2 px-2 g-0 align-items-center car" id="legend">
+                    <p class="col-4 col-sm-3 col-md-2 mb-0 product-name">MODELLO</p>
+                    <p class="col-4 col-sm-3 col-md-2 mb-0 product-brand">MARCA</p>
+                    <p class="col-sm-3 col-md-2 mb-0 product-price">PREZZO</p>
+                    <p class="col-md-4 mb-0 product-description">DESCRIZIONE</p>
                 </div>
             </div>
             <a href="index.html" class="text-black" id="shop-link">Vai allo shop</a>
@@ -77,14 +78,15 @@
         </div>
     </div>
 
-    <template id="product-template">
+    <template id="car-template">
         <div class="product row py-2 px-2 g-0 align-items-center car">
-            <p class="col-4 col-md-2 mb-0 product-name"></p>
-            <p class="col-4 col-md-2 mb-0 product-brand"></p>
-            <p class="col-4 col-md-6 mb-0 hide product-description"></p>
-            <div class="col-4 col-md-2 text-end">
-                <button class="edit-btn"><i class="fas fa-pen"></i></button>
-                <button class="delete-btn" type="button" data-bs-toggle="modal"
+            <p class="col-4 col-sm-3 col-md-2 mb-0 product-name"></p>
+            <p class="col-4 col-sm-3 col-md-2 mb-0 product-brand"></p>
+            <p class="col-sm-3 col-md-2 mb-0 product-price"></p>
+            <p class="col-md-4 mb-0 product-description"></p>
+            <div class="col-4 col-sm-3 col-md-2 d-flex justify-content-end">
+                <a href="#" class="btn d-flex justify-content-center align-items-center edit-btn"><i class="fas fa-pen"></i></a>
+                <button class="ms-1 btn d-flex justify-content-center align-items-center delete-btn" type="button" data-bs-toggle="modal"
                 data-bs-target="#delete-modal"><i class="fas fa-trash-alt"></i></button>
             </div>
         </div>
