--- a/m2/s3/progetto/dettagli.html
+++ b/m2/s3/progetto/dettagli.html
@@ -23,7 +23,7 @@
                 <p id="iannuzzo" class="text-white mb-0 h5">IANNUZZO</p>
                 <p id="auto" class="text-white mb-0 h6">AUTO</p>
             </div>
-            <a href="#" class="text-white" id="back-office-link">BACK OFFICE</a>
+            <a href="back-office.html" class="text-white" id="back-office-link">BACK OFFICE</a>
         </div>
     </header>
 
