--- a/m2/s3/progetto/back-office.html
+++ b/m2/s3/progetto/back-office.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop online</title>
+    <title>Back Office | Iannuzzo Auto</title>
 
     <!-- FONTAWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -17,8 +17,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Orbitron&display=swap" rel="stylesheet">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.min.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/style.min.css">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
                     <div class="spinner-border ms-3 d-none" role="status" id="loader"></div>
                 </div>
 
-                <a href="crea-prodotto.html" class="edit d-block">
+                <a href="./crea-auto.html" class="edit d-block">
                     <div class="d-flex justify-content-center align-items-center">
                         <i class="fas fa-plus"></i>
                     </div>
@@ -92,9 +92,9 @@
         </div>
     </template>
 
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/funzioni.js"></script>
-    <script src="assets/js/back-office.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/funzioni.js"></script>
+    <script src="./assets/js/back-office.js"></script>
 </body>
 
 </html>
