--- a/m2/s3/progetto/dettagli.html
+++ b/m2/s3/progetto/dettagli.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop online | Dettagli</title>
+    <title>Dettagli auto | Iannuzzo Auto</title>
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,8 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Orbitron&display=swap" rel="stylesheet">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.min.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/style.min.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
                 <p id="iannuzzo" class="text-white mb-0 h5">IANNUZZO</p>
                 <p id="auto" class="text-white mb-0 h6">AUTO</p>
             </div>
-            <a href="back-office.html" class="text-white" id="back-office-link">BACK OFFICE</a>
+            <a href="./back-office.html" class="text-white" id="back-office-link">BACK OFFICE</a>
         </div>
     </header>
 
@@ -60,8 +60,8 @@
     <!-- Messages -->
     <div class="alert alert-success position-fixed mb-0 text-white d-none my-alert" role="alert"></div>
 
-    <script src="assets/js/funzioni.js"></script>
-    <script src="assets/js/dettagli.js"></script>
+    <script src="./assets/js/funzioni.js"></script>
+    <script src="./assets/js/dettagli.js"></script>
 </body>
 
 </html>
