--- a/m2/s3/progetto/index.html
+++ b/m2/s3/progetto/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shop online</title>
+  <title>Iannuzzo Auto</title>
 
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,8 +12,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Orbitron&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/style.min.css">
+  <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/css/style.min.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         <p id="iannuzzo" class="text-white mb-0 h5">IANNUZZO</p>
         <p id="auto" class="text-white mb-0 h6">AUTO</p>
       </div>
-      <a href="back-office.html" class="text-white" id="back-office-link">BACK OFFICE</a>
+      <a href="./back-office.html" class="text-white" id="back-office-link">BACK OFFICE</a>
     </div>
   </header>
 
@@ -47,7 +47,7 @@
   <template id="product-template">
     <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center mb-2">
       <div class="card" style="width: 18rem;">
-        <img src="https://picsum.photos/1920/1080" class="card-img-top" alt="foto prodotto">
+        <img src="" class="card-img-top" alt="foto prodotto">
         <div class="card-body">
           <h5 class="card-title product-title"></h5>
           <p class="card-text product-price"></p>
@@ -59,8 +59,8 @@
     </div>
   </template>
 
-  <script src="assets/js/funzioni.js"></script>
-  <script src="assets/js/script.js"></script>
+  <script src="./assets/js/funzioni.js"></script>
+  <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
