--- a/m2/s3/progetto/modifica-auto.html
+++ b/m2/s3/progetto/modifica-auto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop online | Modifica prodotto</title>
+    <title>Modifica auto | Iannuzzo Auto</title>
 
     <!-- FONTAWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -17,8 +17,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Orbitron&display=swap" rel="stylesheet">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.min.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/style.min.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
                 <p id="iannuzzo" class="text-white mb-0 h5">IANNUZZO</p>
                 <p id="auto" class="text-white mb-0 h6">AUTO</p>
             </div>
-            <a href="back-office.html" class="text-white" id="back-office-link">BACK OFFICE</a>
+            <a href="./back-office.html" class="text-white" id="back-office-link">BACK OFFICE</a>
         </div>
     </header>
 
@@ -107,9 +107,9 @@
         </div>
     </div>
 
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/funzioni.js"></script>
-    <script src="assets/js/modifica-prodotto.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/funzioni.js"></script>
+    <script src="./assets/js/modifica-auto.js"></script>
 </body>
 
 </html>
