--- a/m2/s3/progetto/index.html
+++ b/m2/s3/progetto/index.html
@@ -45,15 +45,20 @@
   <div class="alert alert-success position-fixed mb-0 text-white d-none my-alert" role="alert"></div>
 
   <template id="product-template">
-    <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center mb-2">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center mb-2 car">
       <div class="card" style="width: 18rem;">
-        <img src="" class="card-img-top" alt="foto prodotto">
-        <div class="card-body">
-          <h5 class="card-title product-title"></h5>
-          <p class="card-text product-price"></p>
-          <a href="#" class="btn btn-warning text-white me-1 details-btn">DETTAGLI</a>
-          <a href="#" class="btn btn-primary edit-btn">MODIFICA</a>
-          <button class="btn btn-orange text-white mt-2 add-to-cart-btn">ACQUISTA AUTO</button>
+        <img src="" class="card-img-top car-photo" alt="foto prodotto">
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div class="mb-3">
+            <h5 class="card-title product-title mb-0"></h5>
+            <h5 class="card-text car-brand mb-3">ciao</h5>
+            <p class="card-text product-price"></p>
+          </div>
+          <div>
+            <a href="#" class="btn btn-warning text-white me-1 details-btn">DETTAGLI</a>
+            <a href="#" class="btn btn-primary edit-btn">MODIFICA</a>
+            <button class="btn btn-orange text-white mt-2 add-to-cart-btn">ACQUISTA AUTO</button>
+          </div>
         </div>
       </div>
     </div>
