--- a/m3/s1/progetto/index.html
+++ b/m3/s1/progetto/index.html
@@ -20,12 +20,16 @@
 </head>
 
 <body>
-    <header class="p-4 bg-dark">
+    <header class="bg-dark d-flex justify-content-between align-items-center px-4">
         <p class="text-white mb-0 logo">CALL CENTER STAIPRANZANDO?ENOITICHIAMIAMO</p>
+        <div>
+            <input type="number">
+            <button>RICARICA</button>
+        </div>
     </header>
 
     <main class="d-flex justify-content-center bg-dark">
-        <div class="d-flex justify-content-center align-items-center" id="div1">
+        <div class="d-flex justify-content-center align-items-center position-relative" id="div1">
             <div id="telephone">
                 <div id="number" class="d-flex justify-content-between align-items-center">
                     <p class="mb-0"></p>
@@ -55,6 +59,11 @@
                     <i class="fa-solid fa-phone"></i>
                 </button>
             </div>
+
+            <div class="position-absolute d-flex align-items-center" id="credit-div">
+                <p class="mb-0 me-3 d-none"></p>
+                <button>SHOW CREDIT</button>
+            </div>
         </div>
 
         <div class="d-flex justify-content-center align-items-center" id="div2">
@@ -72,6 +81,7 @@
                     <div>
                         <button type="button" id="save-btn">SAVE</button>
                         <button type="button" id="reset-btn">RESET</button>
+                        <button type="button" id="clear-btn">CLEAR</button>
                     </div>
                 </form>
                 <table class="mt-4">
