--- a/m3/s1/progetto/index.html
+++ b/m3/s1/progetto/index.html
@@ -88,7 +88,7 @@
                     <thead>
                         <tr>
                             <th>ID</th>
-                            <th>Durata</th>
+                            <th>Durata (min)</th>
                             <th>Data</th>
                             <th>Ora</th>
                         </tr>
